Refactor user product controller